2005-02-10  Tom Tromey  <tromey@redhat.com>

	* decl.cc (build_utf8_record): Correctly initialize global
	type_utf8const.
	* builtins.cc (map_utf8const): Wrote.

2005-02-10  Tom Tromey  <tromey@redhat.com>

	* classobj.hh (class_object_creator::create_one_field_record):
	Declare.
	* classobj.cc (create_method_array): Wrote.
	(create_one_method_record): New method.
	* hooks.hh (type_method_array): Declare.
	* decl.cc (type_method_array): New global.
	(start_type_initialization): Initialize it.
	(build_method_type): Lay out new type.

2005-02-09  Tom Tromey  <tromey@redhat.com>

	* abi.cc (build_class_reference): New methods.
	* builtins.cc (map_class_object): New method.
	* builtins.hh (tree_builtins::classobj_map): New field.
	(tree_builtins::map_class_object): Declare.
	* classobj.cc (make_decl): Don't create another constructor.
	(create_class_instance): Use map_class_object.  Correctly handle
	'super'.
	(create_index_table): Temporarily set results to null.

2005-02-09  Tom Tromey  <tromey@redhat.com>

	* classobj.cc (make_decl): Set decl assembler name on class
	record.
	* builtins.cc (get_class_object_name): New method.
	* builtins.hh (tree_builtins::get_class_object_name): Declare.

2005-02-09  Tom Tromey  <tromey@redhat.com>

	* decl.cc (build_class_type): Register itable, itable_syms,
	assertion_table, engine.
	* builtins.cc (map_utf8const): New method.
	* builtins.hh (tree_builtins::utf8map): New field.
	(tree_builtins::map_utf8const): Moved body to .cc file.

2005-02-09  Tom Tromey  <tromey@redhat.com>

	* hooks.hh (gcj_abi_version): Declare.
	* classobj.cc (create_class_instance): Rename 'next' field.
	and initialize it properly.
	* decl.cc (build_class_type): Renamed 'next' field.
	(gcj_abi_version): New global.
	(initialize_version): New function.
	(initialize_decls): Call it.

2005-02-09  Tom Tromey  <tromey@redhat.com>

	* classobj.cc (record_creator): Initialize new fields.
	(set_field): Updated.