@@ -46,18 +46,12 @@ tree type_method_symbol_array;
 tree type_method;
 tree type_method_ptr;
 
-// Array of _Jv_Method objects.
-tree type_method_array;
-
 // Type of a _Jv_Field and a pointer to it.
 tree type_field;
 tree type_field_ptr;
 
 // Union used in field reflection info.
 tree type_field_info_union;
-
-// Array of _Jv_Field objects.
-tree type_field_array;
 
 // Type of _Jv_Constants structure.
 tree type_constants;
@@ -197,7 +191,6 @@ start_type_initialization ()
   type_class_ptr = build_pointer_type (type_class);
   type_method = make_node (RECORD_TYPE);
   type_method_ptr = build_pointer_type (type_method);
-  type_method_array = build_array_type (type_method, type_jint);
   type_field = make_node (RECORD_TYPE);
   type_field_ptr = build_pointer_type (type_field);
 }
