@@ -32,11 +32,9 @@ extern GTY (()) tree type_method_symbol_ptr;
 extern GTY (()) tree type_method_symbol_array;
 extern GTY (()) tree type_method;
 extern GTY (()) tree type_method_ptr;
-extern GTY (()) tree type_method_array;
 extern GTY (()) tree type_field;
 extern GTY (()) tree type_field_ptr;
 extern GTY (()) tree type_field_info_union;
-extern GTY (()) tree type_field_array;
 extern GTY (()) tree type_constants;
 extern GTY (()) tree type_object;
 extern GTY (()) tree type_object_ptr;
